--- a/#src/common/main-grid/main-grid.scss
+++ b/#src/common/main-grid/main-grid.scss
@@ -6,7 +6,7 @@
     }
 
     &__content {
-        flex:  1 1 auto;
+        flex: 1 1 auto;
         min-width: 0;
     }
 
@@ -18,6 +18,10 @@
 
         @media (max-width: $md2+px) {
             display: none;
+        }
+
+        & .cta__form-items {
+            margin-bottom: 0 !important;
         }
     }
 
@@ -35,11 +39,9 @@
         }
     }
 
-
-
     &__sticky-box {
-        position: sticky; 
-        position:-webkit-sticky;
+        position: sticky;
+        position: -webkit-sticky;
         top: 17rem;
 
         & > *:not(:last-child) {
@@ -59,6 +61,44 @@
                 margin-left: 0;
                 margin-bottom: 40px;
             }
+        }
+    }
+
+    &--col-3 {
+        & .main-grid__side-column {
+            margin-left: 0;
+            &:first-child {
+                flex: 0 0 20.62%;
+
+                & .services-side-panel {
+                    padding-left: 0;
+                }
+            }
+
+            &:last-child {
+                flex: 0 0 20.43%;
+            }
+
+            & .cta-card {
+                padding: 2.4rem 1.6rem;
+                border-radius: 2.4rem;
+            }
+
+            & .cta-card__title {
+                font-size: 2.6rem;
+                line-height: 1.08em;
+            }
+
+            & .cta-card__text {
+                font-size: 1.6rem;
+                line-height: 1.38em;
+                margin-bottom: 2.4rem;
+            }
+        }
+
+        & .main-grid__content {
+            margin-right: 1.6rem;
+            margin-left: 1.6rem;
         }
     }
 }
