--- a/#src/common/pagination/pagination.scss
+++ b/#src/common/pagination/pagination.scss
@@ -5,41 +5,51 @@
     justify-content: center;
 
     &__arrow {
-        height: 3.2rem;
-        width: 3.2rem;
-        border-radius: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: $secondColor;
-        color: #fff !important;
-        transition: all 0.15s ease-in-out;
-        font-size: 1.8rem;
-        cursor: pointer;
-        flex: 0 0 auto;
-
-        @media (max-width: $md3+px) {
-            width: 24px;
-            height: 24px;
-            font-size: 14px;
+        &:first-child {
+            margin-right: 2.4rem !important;
         }
-
-        @media (min-width: 992px) {
-            &:hover {
-                opacity: 0.7;
+        &:last-child {
+            margin-left: 0.8rem !important;
+        }
+        & a {
+            height: 3.2rem;
+            width: 3.2rem;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: $secondColor;
+            color: #fff !important;
+            transition: all 0.15s ease-in-out;
+            font-size: 1.8rem;
+            cursor: pointer;
+            flex: 0 0 auto;
+    
+            @media (max-width: $md3+px) {
+                width: 24px;
+                height: 24px;
+                font-size: 14px;
+            }
+    
+            @media (min-width: 992px) {
+                &:hover {
+                    opacity: 0.7;
+                }
+            }
+    
+            & svg {
+                height: 1em;
+                width: auto;
             }
         }
 
-        & svg {
-            height: 1em;
-            width: auto;
-        }
     }
 
     &__list {
-        margin: 0 2.4rem;
         display: flex;
+        align-items: center;
         padding-left: 0;
+        margin-bottom: 0;
 
         & > li {
             color: $textColor;
@@ -54,13 +64,11 @@
             &:not(:last-child) {
                 margin-right: 1.6rem;
             }
-        }
-    }
 
-    &__item {
-        &.active {
-            color: $textColorSecondary;
-            text-decoration: underline;
+            & .current {
+                color: $textColorSecondary;
+                text-decoration: underline;
+            }
         }
     }
 }
